tests/paczka1/small_fuzzy/87800356.err
Error in line 5: A559 A559 22,3
Error in line 3: UBjNEQ9 A559 26,3
Error in line 4: T27h7r7gh5 A334 95,4
Error in line 9: Wb3Vb A871 18,6
